--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="container">
             <div>
                 <div id="block-sitebranding">
-                    <h1><a href="#">bloomington.in.gov</a></h1>
+                    <h1><a href="#">City of Bloomington, Indiana</a></h1><h3>John Hamilton, Mayor</h3>
                 </div>
 
                 <div class="search-block-form" data-drupal-selector="search-block-form" id="block-cob-cob-search-form" role="search">
